Fix missing color

--- a/sites/test-site/themes/bunait/assets/css/main.css
+++ b/sites/test-site/themes/bunait/assets/css/main.css
@@ -136,7 +136,7 @@ textarea {
 }
 
 body {
-  background-color: ;
+  background-color: --var(--grey0);
 }
 
 header {
